flussonic (3.69.8)

  * fixed authorization for mainpage broken in 3.69.6
  * fixed reading of Last-Modified in http_file
  * added Last-Modified to flu_file segments
  * enabled audio-only HLS segments
  * fixed bug with playing streams in rtmp

flussonic (3.69.7)

  * fixed linux stats
  * autostarting streams in flu_router
  * fixed failure in start_stream_helper
  * sessions in rtsp play
  * sessions in rtmp play
  * initscript should read /etc/default/flussonic for ASYNC_THREADS
  * HDS and HLS packetizers use single gop collector
  * flu_file now initializes with proper session count
  * direct hds segment access starts hds session

flussonic (3.69.6)

  * linux traffic collector handles opened fd
  * protect pulse log collecting with catch
  * added new cookie-based authorization
  * added autogenerating of auth tokens
  * segments are now served with authorization
  * fixed MPEG-TS publishing. Possible on live urls also
  * sessions are true by default
  * sessions are accounting byte traffic now
  * opened files accounting
  * show opened files in admin panel
  * added push option to stream
  * live streams are with {clients_timeout,false} by default
  * bundled working GrindPlayer

flussonic (3.69.5)

  * fixed HLS ram segments #156
  * fixed authorized HDS and HLS segments serving
  
flussonic (3.69.4)

  * R16 compatibility
  * broken avcC support
  * new routing mechanism
  * refactored flu_file for unified API

flussonic (3.69.3)

  * flu_file now has job queue inside it with autostarting workers
  * write web requests to /var/log/flussonic/access.log

flussonic (3.69.2)

  * fixed HDS live broken in 3.69.1, #128, #126, #119
  * enabled batch disk IO in mp4 segment access
  * enabled file requests throttling: return 503 on overloaded files
  * flu_file now autostarts second copy of file is first is overloaded
  * remove mmap because it is useless since R16
  * flu_file now opens file synchronously

flussonic (3.69.1)
